--- a/app/src/main/res/layout/custom_arrayadapter.xml
+++ b/app/src/main/res/layout/custom_arrayadapter.xml
@@ -10,6 +10,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Informação ..."
+        android:textSize="12dp"
         android:id="@+id/txtInfo"
         android:textColor="@android:color/black"
        />
