--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="yellow">#ffd000</color>
     <color name="blue">#2196F3</color>
     <color name="pink">#E91E63</color>
+    <color name="amarelo">#ffc</color>
 </resources>
